# pydantic

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/pydantic_practice/: example.py
